--- a/conf/experiment/baby_rbvsr_distillation.yaml
+++ b/conf/experiment/baby_rbvsr_distillation.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 core:
-  run_id: 'baby_rbvsr_distillation'
+  run_id: 'baby_real_distillation'
   run_name: "Baby Real Basic - Distilled Pretrain"
 
 defaults:
