--- a/conf/nn/module/distillation.yaml
+++ b/conf/nn/module/distillation.yaml
@@ -2,7 +2,7 @@ _target_: vsr.pl_module.pl_module.LitFlowVSR
 log_interval: 250
 log_k_images: 5
 filter_params: True
-distillation: True
+reverse: True
 
 teacher:
   _target_: optical_flow.modules.spynet.Spynet
