--- a/conf/experiment/baby_rbvsr_flow.yaml
+++ b/conf/experiment/baby_rbvsr_flow.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 core:
-  run_id: 'baby_real_flow'
+  run_id: 'baby_vsr_flow'
   run_name: "Baby Real Basic - Flow Consistency Pretrain"
 
 defaults:
