--- a/conf/nn/data/reds_ws.yaml
+++ b/conf/nn/data/reds_ws.yaml
@@ -91,17 +91,10 @@ datasets:
         size: [ 256, 256 ]
 
     lr_augmentation:
-      - _target_: kornia.augmentation.RandomGaussianBlur
-        kernel_size: 3
-        keepdim: True
-        sigma: [ 0.2, 3 ]
-        same_on_batch: True
-        p: 0.7
-
       - _target_: kornia.augmentation.Resize
         size: [ 64, 64 ]
 
       - _target_: core.augmentations.RandomVideoCompression
         codec: [ 'libx264', 'h264', 'mpeg4' ]
         crf: [ 30, 40 ]
-        fps: [ 15, 30 ]
+        fps: 30
