--- a/conf/experiment/baby_mixer.yaml
+++ b/conf/experiment/baby_mixer.yaml
@@ -9,4 +9,4 @@ defaults:
   - override /train/trainer: deepspeed
   - override /train/strategy: deepspeed
 
-nn.module.set_lr: False
+nn.module.set_lr@_global_: False
