--- a/conf/nn/module/distillation.yaml
+++ b/conf/nn/module/distillation.yaml
@@ -1,6 +1,5 @@
 _target_: vsr.pl_module.pl_module.LitFlowVSR
 log_interval: 250
-log_k_images: 5
 filter_params: True
 reverse: True
 
@@ -25,6 +24,6 @@ metric:
 
 defaults:
   - model: baby_realbasic
-  - loss: flow_loss
+  - loss: pixel_loss
   - optimizer: adam
   - scheduler: cosine_warmup
