--- a/conf/experiment/baby_mixer.yaml
+++ b/conf/experiment/baby_mixer.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 core:
-  run_id: 'baby_mixervsr'
+  run_id: 'baby_mixer'
   run_name: "Baby MixerVSR - Default Pretrain"
 
 defaults:
