--- a/conf/experiment/baby_mixer_flow.yaml
+++ b/conf/experiment/baby_mixer_flow.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 core:
-  run_id: 'baby_mixer_flow'
+  run_id: 'baby_mixer_opflow'
   run_name: "Baby MixerVSR - Flow Pretrain"
 
 defaults:
