--- a/conf/nn/module/distillation.yaml
+++ b/conf/nn/module/distillation.yaml
@@ -1,4 +1,4 @@
-_target_: vsr.pl_module.pl_module.LitFlowVSR
+_target_: vsr.pl_module.LitFlowVSR
 log_interval: 250
 filter_params: True
 reverse: True
