--- a/conf/experiment/baby_rbvsr_gan.yaml
+++ b/conf/experiment/baby_rbvsr_gan.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 core:
-  run_id: 'baby_vsr_default_gan'
+  run_id: 'baby_defaultvsr_gan'
   run_name: "Baby Real Basic - Finetune"
 
 defaults:
