--- a/conf/nn/data/reds_ws.yaml
+++ b/conf/nn/data/reds_ws.yaml
@@ -1,7 +1,7 @@
 _target_: vsr.data.datamodule.DataModuleVSR
-num_workers: 0
+num_workers: 8
 batch_size: 4
-prefetch_factor: null
+prefetch_factor: 4
 datasets:
   train:
     _target_: vsr.data.dataset.DatasetVSR
