--- a/conf/nn/data/reds_ws.yaml
+++ b/conf/nn/data/reds_ws.yaml
@@ -13,9 +13,9 @@ datasets:
     hr_augmentation:
       - _target_: kornia.augmentation.RandomCrop
         size: [ 256, 256 ]
+        pad_if_needed: True
         same_on_batch: True
         keepdim: True
-        p: 1.0
 
       - _target_: kornia.augmentation.RandomHorizontalFlip
         p: 0.5
@@ -78,9 +78,9 @@ datasets:
     hr_augmentation:
       - _target_: kornia.augmentation.RandomCrop
         size: [ 256, 256 ]
+        pad_if_needed: True
         same_on_batch: True
         keepdim: True
-        p: 1.0
 
     lr_augmentation:
       - _target_: kornia.augmentation.Resize
