--- a/conf/experiment/baby_rr3db.yaml
+++ b/conf/experiment/baby_rr3db.yaml
@@ -1,9 +1,11 @@
 # @package _global_
 core:
-  run_id: 'baby_rr3db_testing'
+  run_id: 'testing'
   run_name: "Baby RR3DB - Pretrain"
 
 defaults:
   - override /nn/module: baby_rr3db
   - override /train/trainer: deepspeed
   - override /train/strategy: deepspeed
+
+finetune: False
