testing rr3db configuration

--- a/conf/experiment/baby_rr3db.yaml
+++ b/conf/experiment/baby_rr3db.yaml
@@ -5,6 +5,7 @@ core:
 
 defaults:
   - override /nn/module: baby_rr3db
+  - override /nn/module/optimizer: deepspeed
   - override /train/trainer: deepspeed
   - override /train/strategy: deepspeed
 
