testing rr3db configuration

--- a/conf/experiment/baby_rr3db.yaml
+++ b/conf/experiment/baby_rr3db.yaml
@@ -10,3 +10,8 @@ defaults:
   - override /train/strategy: deepspeed
 
 finetune: False
+
+nn:
+  data:
+    _target_: vsr.models.RR3DB.dataset.DatasetVSR
+
