testing rr3db configuration

--- a/conf/experiment/baby_rr3db.yaml
+++ b/conf/experiment/baby_rr3db.yaml
@@ -13,5 +13,7 @@ finetune: False
 
 nn:
   data:
-    _target_: vsr.models.RR3DB.dataset.DatasetVSR
+    datasets:
+      train:
+        _target_: vsr.models.RR3DB.dataset.DatasetVSR
 
