--- a/conf/experiment/baby_rr3db.yaml
+++ b/conf/experiment/baby_rr3db.yaml
@@ -5,6 +5,9 @@ core:
 
 defaults:
   - override /nn/module: baby_rr3db
+  - override /nn/module/optimizer: deepspeed
+  - override /train/trainer: deepspeed
+  - override /train/strategy: deepspeed
 
 finetune: False
 
