--- a/conf/test.yaml
+++ b/conf/test.yaml
@@ -1,9 +1,9 @@
-finetune: 'path/to/weights'
+finetune: '/path/to/ckpt'
 
-path_hr: '/mnt/hdd/dataset/pexels/hr'
-path_lr: '/mnt/hdd/dataset/pexels/lr_crf_42'
+path_hr: '/path/to/hr'
+path_lr: '/path/to/lr'
 
-output_path: '/mnt/hdd/dataset/pexels/sr_crf_42'
+model_name: 'model_name'
 
 defaults:
-  - nn/module/model: baby_realbasic
+  - nn/module/model: default
