--- a/conf/experiment/baby_rbvsr.yaml
+++ b/conf/experiment/baby_rbvsr.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 core:
-  run_id: 'baby_vsr_default'
-  run_name: "Baby Real Basic - Default Pretrain"
+  run_id: 'baby_vsr_default2'
+  run_name: "Baby Real Basic - Pretrain 2"
 
 defaults:
   - override /nn/module/optimizer: deepspeed
