--- a/conf/nn/module/gan.yaml
+++ b/conf/nn/module/gan.yaml
@@ -1,6 +1,5 @@
-_target_: vsr.pl_module.LitGanVSR
+_target_: vsr.models.RealBasicVSR.pl_module.GanLit
 log_interval: 250
-log_k_images: 5
 
 d_step_frequency: 1
 
@@ -24,11 +23,11 @@ discriminator:
 
 perceptual_loss:
   _target_: core.losses.PerceptualLoss
-  weight: 1e-2
+  weight: 1.0
 
 adversarial_loss:
   _target_: core.losses.AdversarialLoss
-  weight: 1e-4
+  weight: 5e-2
 
 defaults:
   - model: baby_realbasic
