--- a/conf/experiment/baby_rr3db.yaml
+++ b/conf/experiment/baby_rr3db.yaml
@@ -17,3 +17,8 @@ nn:
       train:
         _target_: vsr.models.RR3DB.dataset.DatasetVSR
 
+train:
+  trainer:
+    strategy: 'ddp'
+    devices: 2
+
