--- a/conf/nn/module/model/baby_rr3db.yaml
+++ b/conf/nn/module/model/baby_rr3db.yaml
@@ -6,8 +6,4 @@ nrb: 3
 nb: 4
 gc: 16
 sf: 4
-raft_small: True
-raft_scale_factor: 2
-raft_pretrained: True
-iterations: 5
-gamma: 0.8
+of_loss: null
