--- a/conf/experiment/baby_rr3db.yaml
+++ b/conf/experiment/baby_rr3db.yaml
@@ -1,19 +1,21 @@
 # @package _global_
 core:
-  run_id: 'testign_schedules'
-  run_name: "Baby RR3DB - Pretrain"
+  run_id: 'curriculum_learning'
+  run_name: "Baby RR3DB - Curriculum"
 
 defaults:
   - override /nn/module: baby_rr3db
+  - override /nn/module/scheduler: cosine
   - override /train/strategy: ddp
-  - override /nn/data: schedule2
+  - override /nn/data: easy_schedule
 
 finetune: False
 
 train:
-  restore: /home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/testign_schedules/checkpoints/last.ckpt
+  restore: null
   trainer:
     devices: 2
+    max_steps: 50000
 
 nn:
   data:
