--- a/conf/nn/data/hard_schedule.yaml
+++ b/conf/nn/data/hard_schedule.yaml
@@ -1,15 +1,15 @@
 _target_: vsr.data.datamodule.DataModuleVSR
 
-num_workers: 4
+num_workers: 8
 batch_size: 4
 prefetch_factor: 4
 
 datasets:
   train:
     _target_: vsr.data.dataset.DatasetVSR
-    path: "/home/aghinassi/VSR/MergedVSR"
+    path: "/home/aghinassi/Desktop/MergedVSR"
     split: "train"
-    seq: 15
+    seq: 12
     scale: 4
     size: 0.9
     hr_augmentation:
@@ -36,8 +36,10 @@ datasets:
         p: 1.0
 
     lr_augmentation:
-      - _target_: core.augmentations.RandomJPEGCompression
-        quality: [ 40, 90 ]
+      - _target_: core.augmentations.RandomVideoCompression
+        codec: [ 'libx264', 'h264', 'mpeg4' ]
+        crf: [ 45, 55 ]
+        fps: [ 30 ]
 
       - _target_: core.augmentations.RandomJPEGCompression
         quality: [ 40, 90 ]
@@ -49,19 +51,19 @@ datasets:
         keepdim: True
         p: 0.7
 
-      - _target_: kornia.augmentation.RandomSharpness
-        sharpness: 0.7
+      - _target_: kornia.augmentation.RandomGaussianBlur
+        kernel_size: 5
+        sigma: [0.5, 3]
         same_on_batch: False
         keepdim: True
-        p: 0.7
+
+      - _target_: core.augmentations.RandomJPEGCompression
+        quality: [ 40, 90 ]
 
       - _target_: kornia.augmentation.Resize
         size: [ 64, 64 ]
 
-      - _target_: core.augmentations.RandomVideoCompression
-        codec: [ 'libx264', 'h264', 'mpeg4' ]
-        crf: [ 30, 40 ]
-        fps: [ 30 ]
+
 
   val:
     _target_: ${nn.data.datasets.train._target_}
@@ -78,10 +80,10 @@ datasets:
         keepdim: True
 
     lr_augmentation:
-      - _target_: kornia.augmentation.Resize
-        size: [ 64, 64 ]
-
       - _target_: core.augmentations.RandomVideoCompression
         codec: [ 'libx264', 'h264', 'mpeg4' ]
-        crf: [ 30, 40 ]
+        crf: [ 35, 45 ]
         fps: [ 30 ]
+
+      - _target_: kornia.augmentation.Resize
+        size: [ 64, 64 ]
