--- a/conf/nn/data/mid_schedule.yaml
+++ b/conf/nn/data/mid_schedule.yaml
@@ -29,11 +29,27 @@ datasets:
         same_on_batch: True
         keepdim: True
 
+      - _target_: kornia.augmentation.RandomSharpness
+        sharpness: 0.3
+        same_on_batch: True
+        keepdim: True
+        p: 1.0
+
     lr_augmentation:
       - _target_: core.augmentations.RandomVideoCompression
         codec: [ 'libx264', 'h264', 'mpeg4' ]
-        crf: [ 35, 45 ]
+        crf: [ 45, 55 ]
         fps: [ 30 ]
+
+      - _target_: core.augmentations.RandomJPEGCompression
+        quality: [ 40, 90 ]
+
+      - _target_: kornia.augmentation.RandomGaussianNoise
+        mean: 0
+        std: 0.02
+        same_on_batch: False
+        keepdim: True
+        p: 0.7
 
       - _target_: kornia.augmentation.Resize
         size: [ 64, 64 ]
@@ -57,7 +73,7 @@ datasets:
     lr_augmentation:
       - _target_: core.augmentations.RandomVideoCompression
         codec: [ 'libx264', 'h264', 'mpeg4' ]
-        crf: [ 35, 45 ]
+        crf: [ 38 ]
         fps: [ 30 ]
 
       - _target_: kornia.augmentation.Resize
