--- a/conf/experiment/baby_rr3db.yaml
+++ b/conf/experiment/baby_rr3db.yaml
@@ -7,18 +7,17 @@ defaults:
   - override /nn/module: baby_rr3db
   - override /nn/module/scheduler: cosine
   - override /train/strategy: ddp
-  - override /nn/data: mid_schedule
+  - override /nn/data: hard_schedule
 
 finetune: False
 
 train:
-  restore: /home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/curriculum_learning/checkpoints/last.ckpt
+  restore: "/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/curriculum_learning/checkpoints/'epoch=1120-step=31899.ckpt'"
   trainer:
     devices: 2
-    max_steps: 50000
-    max_epochs: 15000
+    max_steps: 150000
+    max_epochs: 5000
     gradient_clip_val: 1
-    gradient_clip_algorithm: value
 
 nn:
   data:
@@ -26,3 +25,6 @@ nn:
       train:
         _target_: vsr.models.RR3DB.dataset.DatasetVSR
 
+  module:
+    optimizer:
+      lr: 5e-5
