--- a/conf/experiment/baby_rr3db.yaml
+++ b/conf/experiment/baby_rr3db.yaml
@@ -12,7 +12,7 @@ defaults:
 finetune: False
 
 train:
-  restore: '"/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/curriculum_learning/checkpoints/epoch=1120-step=31899.ckpt"'
+  restore: /home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/curriculum_learning/checkpoints/last.ckpt
   trainer:
     devices: 2
     max_steps: 150000
