--- a/conf/train/callbacks/default.yaml
+++ b/conf/train/callbacks/default.yaml
@@ -5,6 +5,6 @@
   mode: ${train.monitor.mode}
   save_last: True
 
-- _target_: pytorch_lightning.callbacks.ModelSummary
-  max_depth: 3
+- _target_: pytorch_lightning.callbacks.LearningRateMonitor
+  logging_interval: step
 
