--- a/conf/experiment/baby_rbvsr.yaml
+++ b/conf/experiment/baby_rbvsr.yaml
@@ -1,10 +1,10 @@
 # @package _global_
 core:
-  run_id: 'baby_vsr_hard'
+  run_id: 'baby_vsr_harder'
   run_name: "Baby Real Basic - Hard Schedule"
 
 defaults:
-  - override /nn/module/scheduler: cosine_warmup
+  - override /nn/module/scheduler: cosine
   - override /train/strategy: ddp
   - override /nn/data: hard_schedule
 
@@ -13,11 +13,9 @@ finetune: /home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/baby_vsr
 nn:
   module:
     optimizer:
-      lr: 1e-5
+      lr: 1e-6
     scheduler:
-      min_lrs_pow: 1
-      first_cycle_steps: 21000
-      warmup_steps: 2000
+      eta_min: 3e-6
     set_lr: False
 
 train:
