--- a/conf/experiment/baby_rbvsr.yaml
+++ b/conf/experiment/baby_rbvsr.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 core:
-  run_id: 'baby_vsr_harder'
+  run_id: 'baby_vsr_hardd'
   run_name: "Baby Real Basic - Hard Schedule"
 
 defaults:
@@ -15,7 +15,7 @@ nn:
     optimizer:
       lr: 1e-6
     scheduler:
-      eta_min: 3e-6
+      eta_min: 6e-7
     set_lr: False
 
 train:
