--- a/conf/nn/data/default.yaml
+++ b/conf/nn/data/default.yaml
@@ -31,7 +31,7 @@ datasets:
 
     lr_augmentation:
       - _target_: core.augmentations.RandomJPEGCompression
-        quality: [ 40, 90 ]
+        quality: [ 50, 90 ]
 
       - _target_: kornia.augmentation.RandomGaussianNoise
         mean: 0
@@ -40,21 +40,21 @@ datasets:
         keepdim: True
         p: 0.7
 
-      - _target_: kornia.augmentation.RandomSharpness
-        sharpness: 0.7
+      - _target_: kornia.augmentation.RandomGaussianBlur
+        kernel_size: 5
+        sigma: [ 0.5, 1.5 ]
         same_on_batch: False
         keepdim: True
-        p: 0.7
 
       - _target_: core.augmentations.RandomJPEGCompression
-        quality: [ 30, 90 ]
+        quality: [ 50, 80 ]
 
       - _target_: kornia.augmentation.Resize
         size: [ 64, 64 ]
 
       - _target_: core.augmentations.RandomVideoCompression
         codec: [ 'libx264', 'h264', 'mpeg4' ]
-        crf: [ 30, 40 ]
+        crf: [ 32, 38 ]
         fps: [ 30 ]
 
   val:
@@ -72,10 +72,10 @@ datasets:
         keepdim: True
 
     lr_augmentation:
-      - _target_: kornia.augmentation.Resize
-        size: [ 64, 64 ]
-
       - _target_: core.augmentations.RandomVideoCompression
         codec: [ 'libx264', 'h264', 'mpeg4' ]
-        crf: [ 35, 45 ]
+        crf: [ 40 ]
         fps: [ 30 ]
+
+      - _target_: kornia.augmentation.Resize
+        size: [ 64, 64 ]
