--- a/conf/experiment/basic_cl_easy.yaml
+++ b/conf/experiment/basic_cl_easy.yaml
@@ -10,6 +10,10 @@ defaults:
 finetune: null
 
 nn:
+  data:
+    datasets:
+      train:
+        path: "/home/aghinassi/Desktop/MergedVSR"
   module:
     optimizer:
       lr: 1e-4
