--- a/conf/experiment/basic_def.yaml
+++ b/conf/experiment/basic_def.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 core:
-  run_id: 'realbasic_default'
+  run_id: 'realbasicvsr_default'
   run_name: "Real Basic Default"
 
 defaults:
@@ -17,5 +17,5 @@ nn:
 train:
   trainer:
     devices: 2
-    max_steps: 63000
+    max_steps: 50000
     gradient_clip_val: 1
