--- a/conf/experiment/basic_def.yaml
+++ b/conf/experiment/basic_def.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 core:
-  run_id: 'realbasicvsr_default'
+  run_id: 'realbasicvsr_default_schedule'
   run_name: "Real Basic Default"
 
 defaults:
