--- a/conf/nn/data/default.yaml
+++ b/conf/nn/data/default.yaml
@@ -73,7 +73,7 @@ datasets:
     size: 0.1
     hr_augmentation:
       - _target_: kornia.augmentation.CenterCrop
-        size: [ 256, 256 ]
+        size: ${as_tuple:256,256}
         keepdim: True
 
     lr_augmentation:
