--- a/conf/nn/data/easy_schedule.yaml
+++ b/conf/nn/data/easy_schedule.yaml
@@ -38,8 +38,8 @@ datasets:
     lr_augmentation:
       - _target_: core.augmentations.RandomVideoCompression
         codec: [ 'libx264', 'h264', 'mpeg4' ]
-        crf: [ 38, 42 ]
-        fps: [ 30 ]
+        crf: [ 34, 42 ]
+        fps: [ 6, 30 ]
 
       - _target_: kornia.augmentation.Resize
         size: [ 64, 64 ]
