--- a/conf/nn/data/hard_schedule.yaml
+++ b/conf/nn/data/hard_schedule.yaml
@@ -58,7 +58,7 @@ datasets:
       - _target_: core.augmentations.RandomVideoCompression
         codec: [ 'libx264', 'h264', 'mpeg4' ]
         crf: [ 38, 42 ]
-        fps: [ 30 ]
+        fps: [ 6, 30 ]
 
       - _target_: kornia.augmentation.Resize
         size: [ 64, 64 ]
