--- a/conf/nn/data/easy_schedule.yaml
+++ b/conf/nn/data/easy_schedule.yaml
@@ -1,8 +1,8 @@
 _target_: vsr.data.datamodule.DataModuleVSR
 
-num_workers: 20
+num_workers: 12
 batch_size: 8
-prefetch_factor: 8
+prefetch_factor: 6
 
 datasets:
   train:
@@ -38,8 +38,8 @@ datasets:
     lr_augmentation:
       - _target_: core.augmentations.RandomVideoCompression
         codec: [ 'libx264', 'h264', 'mpeg4' ]
-        crf: [ 34, 42 ]
-        fps: [ 6, 30 ]
+        crf: [ 34, 45 ]
+        fps: [ 30 ]
 
       - _target_: kornia.augmentation.Resize
         size: [ 64, 64 ]
