--- a/conf/nn/data/mid_schedule.yaml
+++ b/conf/nn/data/mid_schedule.yaml
@@ -48,8 +48,8 @@ datasets:
 
       - _target_: core.augmentations.RandomVideoCompression
         codec: [ 'libx264', 'h264', 'mpeg4' ]
-        crf: [ 38, 42 ]
-        fps: [ 6, 30 ]
+        crf: [ 36, 45 ]
+        fps: [ 30 ]
 
       - _target_: kornia.augmentation.Resize
         size: [ 64, 64 ]
