--- a/conf/experiment/basic_gan.yaml
+++ b/conf/experiment/basic_gan.yaml
@@ -1,7 +1,9 @@
 # @package _global_
 core:
-  run_id: 'baby_vsr_{pretrain}_gan'
-  run_name: "Real Basic {Pretrain} - GAN"
+  run_id: 'realbasicvsr_gan'
+  run_name: "Real Basic Default - GAN"
+
+finetune: '/home/aghinassi/VSR/checkpoints/realbasic_default.ckpt'
 
 defaults:
   - override /nn/data: default
@@ -12,5 +14,3 @@ nn:
     dataset:
       train:
         path: "/home/aghinassi/Desktop/MergedVSR"
-
-finetune: '/home/aghinassi/VSR/{pretrain}.ckpt'
