--- a/conf/nn/module/gan.yaml
+++ b/conf/nn/module/gan.yaml
@@ -1,11 +1,11 @@
 _target_: vsr.models.RealBasicVSR.pl_module.GanLit
-log_interval: 250
+log_interval: 5
 
 d_step_frequency: 1
 
-set_lr: null
+set_lr: false
 
-d_set_lr: null
+d_set_lr: false
 
 metric:
   _target_: core.metrics.MetricCollection
