--- a/conf/nn/module/scheduler/gan_cosine.yaml
+++ b/conf/nn/module/scheduler/gan_cosine.yaml
@@ -1,11 +1,11 @@
 generator:
   _target_: torch.optim.lr_scheduler.CosineAnnealingLR
-  T_max: ${train.trainer.max_epochs}
-  eta_min: 1e-6
+  T_max: ${train.trainer.max_steps}
+  eta_min: 5e-5
   verbose: False
 
 discriminator:
   _target_: torch.optim.lr_scheduler.CosineAnnealingLR
-  T_max: ${train.trainer.max_epochs}
-  eta_min: 1e-6
+  T_max: ${train.trainer.max_steps}
+  eta_min: 1e-4
   verbose: False
