--- a/conf/experiment/basic_gan.yaml
+++ b/conf/experiment/basic_gan.yaml
@@ -13,15 +13,16 @@ nn:
   module:
     scheduler:
       generator:
-        _target_: torch.optim.lr_scheduler.ChainedScheduler
-          - _target_: torch.optim.lr_scheduler.LinearWarmup
-            start_factor: 1e-20
-            total_iters: 750
+       _target_: torch.optim.lr_scheduler.ChainedScheduler
+      _args_:
+        - _target_: torch.optim.lr_scheduler.LinearLR
+          start_factor: 1e-20
+          total_iters: 750
 
-          - _target_: torch.optim.lr_scheduler.CosineAnnealingLR
-            T_max: ${train.trainer.max_steps}
-            eta_min: 1e-5
-            verbose: False
+        - _target_: torch.optim.lr_scheduler.CosineAnnealingLR
+          T_max: ${train.trainer.max_steps}
+          eta_min: 1e-5
+          verbose: False
 
   data:
     batch_size: 4
