--- a/conf/experiment/basic_gan.yaml
+++ b/conf/experiment/basic_gan.yaml
@@ -18,12 +18,13 @@ nn:
         {
           _target_: torch.optim.lr_scheduler.LinearLR,
           start_factor: 1e-20,
-          total_iters: 750
-        }, {
+          total_iters: 750,
+        },
+        {
           _target_: torch.optim.lr_scheduler.CosineAnnealingLR,
           T_max: ${ train.trainer.max_steps },
           eta_min: 1e-5,
-          verbose: False
+          verbose: False,
         }
       ]
 
