--- a/conf/experiment/basic_gan.yaml
+++ b/conf/experiment/basic_gan.yaml
@@ -31,10 +31,12 @@ nn:
     datasets:
       train:
         path: "/home/aghinassi/VSR/MergedVSR"
-        trainer:
-          devices: 2
-          max_steps: 60000
-          gradient_clip_val: 1
+
+train:
+  trainer:
+    devices: 2
+    max_steps: 60000
+    gradient_clip_val: 1
 
 
 
