--- a/conf/experiment/rr3db_cl_easy.yaml
+++ b/conf/experiment/rr3db_cl_easy.yaml
@@ -18,6 +18,8 @@ nn:
         path: "/home/aghinassi/Desktop/MergedVSR"
   module:
     _target_: vsr.models.RR3DB.pl_module.LitBase
+    model:
+      of_loss: 0.15
     optimizer:
       lr: 1e-4
     scheduler:
