--- a/conf/experiment/rr3db_cl_easy.yaml
+++ b/conf/experiment/rr3db_cl_easy.yaml
@@ -12,6 +12,7 @@ finetune: null
 
 nn:
   data:
+    batch_size: 4
     datasets:
       train:
         _target_: vsr.models.RR3DB.dataset.DatasetVSR
