--- a/conf/experiment/rr3db_def.yaml
+++ b/conf/experiment/rr3db_def.yaml
@@ -4,8 +4,7 @@ core:
   run_name: "Baby RR3DB Default"
 
 defaults:
-  - override /train/strategy: deepspeed
-  - override /nn/module/optimizer: deepspeed
+  - override /train/strategy: ddp
   - override /nn/module/model: baby_rr3db
 
 finetune: null
