--- a/conf/train/strategy/deepspeed.yaml
+++ b/conf/train/strategy/deepspeed.yaml
@@ -1,5 +1,8 @@
 _target_: pytorch_lightning.strategies.DeepSpeedStrategy
 stage: 3
 offload_optimizer: cpu
-allgather_bucket_size: 1000
-reduce_bucket_size: 1000
+allgather_bucket_size: 100000
+reduce_bucket_size: 100000
+partition_activations: True
+cpu_checkpointing: True
+contiguous_memory_optimization: True
