--- a/conf/nn/module/model/baby_realbasic.yaml
+++ b/conf/nn/module/model/baby_realbasic.yaml
@@ -4,5 +4,6 @@ mid_channels: 64
 upscale: ${nn.data.datasets.train.scale}
 is_mirror: False
 res_blocks: 5
+optical_flow: "spynet"
 pretrained_flow: True
 train_flow: False
