--- a/conf/experiment/basic_gan.yaml
+++ b/conf/experiment/basic_gan.yaml
@@ -7,6 +7,7 @@ finetune: '/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/realbas
 
 defaults:
   - override /nn/data: default
+  - override /train/strategy: ddp
   - override /nn/module: gan
 
 nn:
@@ -20,7 +21,7 @@ nn:
 
 train:
   trainer:
-    devices: 1
+    devices: 2
     max_steps: 100000
 
 
