--- a/conf/nn/module/model/baby_realbasic.yaml
+++ b/conf/nn/module/model/baby_realbasic.yaml
@@ -1,4 +1,4 @@
-_target_: vsr.models.RealBasicVSR.modules.realbasicvsr.RealBasicVSR
+_target_: vsr.models.RealBasicVSR.realbasicvsr.RealBasicVSR
 cleaning_blocks: 5
 mid_channels: 64
 upscale: ${nn.data.datasets.train.scale}
