--- a/conf/train/logger/default.yaml
+++ b/conf/train/logger/default.yaml
@@ -2,5 +2,6 @@ _target_: pytorch_lightning.loggers.WandbLogger
 project: ${core.project_name}
 save_dir: ${oc.env:LOGGING_DIR}
 log_model: True
+id: ${core.run_id}
 name: ${core.run_name}
 tags: ${core.tags}
