--- a/conf/nn/module/model/baby_vrt.yaml
+++ b/conf/nn/module/model/baby_vrt.yaml
@@ -11,7 +11,7 @@ num_heads: [4, 4, 4, 4, 4, 4, 4, 4, 4]
 mul_attn_ratio: 0.75
 mlp_ratio: 2.0
 qkv_bias: True
-qk_scale: None
+qk_scale: null
 drop_path_rate: 0.2
 optical_flow: "spynet"
 optical_flow_pretrained: True
