--- a/conf/nn/module/model/baby_vrt.yaml
+++ b/conf/nn/module/model/baby_vrt.yaml
@@ -1,4 +1,4 @@
-_target_: vsr.models.VRT.vrt.VRT
+_target_: vsr.models.VRT.network_vrt.VRT
 upscale: 4
 in_chans: 3
 out_chans: 3
@@ -13,9 +13,9 @@ mlp_ratio: 2.0
 qkv_bias: True
 qk_scale: null
 drop_path_rate: 0.2
-optical_flow: "spynet"
+#optical_flow: "spynet"
 optical_flow_pretrained: True
-optical_flow_train: False
+#optical_flow_train: False
 pa_frames: 2
 deformable_groups: 4
 recal_all_flows: False
