--- a/conf/experiment/vrt_def.yaml
+++ b/conf/experiment/vrt_def.yaml
@@ -19,6 +19,8 @@ nn:
       eta_min: 1e-7
   data:
     batch_size: 4
+    prefetch_factor: 4
+    num_workers: 8
     datasets:
       train:
         path: "/home/aghinassi/Desktop/MergedVSR"
