--- a/conf/nn/module/scheduler/gan_cosine.yaml
+++ b/conf/nn/module/scheduler/gan_cosine.yaml
@@ -1,12 +1,8 @@
 generator:
-  - _target_: torch.optim.lr_scheduler.LinearLR
-    total_iters: 5000
-    start_factor: 1e-30
-
-  - _target_: torch.optim.lr_scheduler.CosineAnnealingLR
-    T_max: ${train.trainer.max_steps}
-    eta_min: 5e-5
-    verbose: False
+  _target_: core.schedulers.CosineAnnealingLinearWarmup
+  first_cycle_steps: 1e6
+  min_lrs_pow: 12
+  warmup_steps: 5000
 
 discriminator:
   _target_: torch.optim.lr_scheduler.CosineAnnealingLR
