--- a/conf/experiment/vrt_def.yaml
+++ b/conf/experiment/vrt_def.yaml
@@ -6,6 +6,7 @@ core:
 defaults:
   - override /train/strategy: ddp
   - override /nn/module/model: baby_vrt
+  - override /train/callbacks: default_swa
 
 finetune: null
 
@@ -13,7 +14,7 @@ nn:
   module:
     _target_: vsr.models.VRT.pl_module.LitBase
     optimizer:
-      lr: 4e-4
+      lr: 1e-4
       betas: [ 0.9, 0.99 ]
     scheduler:
       eta_min: 1e-7
@@ -30,4 +31,5 @@ train:
   trainer:
     devices: 1
     max_steps: 100000
-    gradient_clip_val: 1
+    gradient_clip_val: 0.5
+    gradient_clip_algorithm: "value"
