--- a/conf/experiment/basic_gan.yaml
+++ b/conf/experiment/basic_gan.yaml
@@ -39,7 +39,8 @@ train:
   trainer:
     devices: 1
     max_steps: 100000
-    gradient_clip_val: 1
+    gradient_clip_val: 0.5
+    gradient_clip_algorithm: "value"
 
 
 
