--- a/conf/nn/module/model/baby_vrt.yaml
+++ b/conf/nn/module/model/baby_vrt.yaml
@@ -1,25 +1,23 @@
 _target_: vsr.models.VRT.vrt.TinyVRT
-upscale: 4
 in_chans: 3
 out_chans: 3
+refine_steps: 3
+refine_blocks: 5
+refine_ch: 64
 img_size: [6, 64, 64]
 window_size: [6, 8, 8]
-depths: [2, 2, 2, 2, 2, 2, 2]
-indep_reconsts: [11, 12]
-embed_dims: [2, 2, 2, 2, 2, 2, 2]
-num_heads: [2, 2, 2, 2, 2, 2, 2]
+depths: [8, 8, 8, 8, 8, 4, 4]
+indep_reconsts: [-2, -1]
+embed_dims: [64, 64, 64, 64, 64, 80, 80]
+num_heads: [6, 6, 6, 6, 6, 6, 6]
 mul_attn_ratio: 0.75
-mlp_ratio: 2.0
+mlp_ratio: 2.
 qkv_bias: True
-qk_scale: null
+qk_scale: None
 drop_path_rate: 0.2
-#optical_flow: "spynet"
+norm_layer: nn.LayerNorm
 optical_flow_pretrained: True
-#optical_flow_train: False
 pa_frames: 2
-deformable_groups: 4
-recal_all_flows: False
-use_checkpoint_attn: False
-use_checkpoint_ffn: False
-no_checkpoint_attn_blocks: []
-no_checkpoint_ffn_blocks: []
+deformable_groups: 8
+restore_hidden: 128
+restore_layers: 5
