--- a/conf/nn/data/default.yaml
+++ b/conf/nn/data/default.yaml
@@ -14,7 +14,7 @@ datasets:
     size: 0.9
     hr_augmentation:
       - _target_: kornia.augmentation.RandomCrop
-        size: [ 256, 256 ]
+        size: [ 64, 64 ]
         pad_if_needed: True
         same_on_batch: True
         keepdim: True
@@ -61,8 +61,8 @@ datasets:
         crf: [ 36, 40 ]
         fps: [ 30 ]
 
-      - _target_: kornia.augmentation.Resize
-        size: [ 64, 64 ]
+#      - _target_: kornia.augmentation.Resize
+#        size: [ 64, 64 ]
 
   val:
     _target_: ${nn.data.datasets.train._target_}
@@ -73,7 +73,7 @@ datasets:
     size: 0.1
     hr_augmentation:
       - _target_: torchvision.transforms.CenterCrop
-        size: 256
+        size: 64
 
     lr_augmentation:
       - _target_: core.augmentations.RandomVideoCompression
@@ -81,5 +81,5 @@ datasets:
         crf: [ 40 ]
         fps: [ 30 ]
 
-      - _target_: kornia.augmentation.Resize
-        size: [ 64, 64 ]
+#      - _target_: kornia.augmentation.Resize
+#        size: [ 64, 64 ]
