--- a/conf/experiment/vrt_def.yaml
+++ b/conf/experiment/vrt_def.yaml
@@ -8,7 +8,7 @@ defaults:
   - override /nn/module/model: baby_vrt
   - override /train/callbacks: default_swa
 
-finetune: null
+checkpoint: null
 
 nn:
   module:
